packages/frontend/src/components/Dialog/styles.module.scss
@import '../../../scss/variables.scss';

$headerButtonSize: 30px;
$paddingHorizontal: 30px;
$paddingVertical: 20px;

.dialog {
  padding: 0;
  @media (width < $default-dialog-width) {
    max-width: 100vw !important;
    min-width: calc(100vw - 1rem) !important;
  }

  &.unstyled {
    background: none;
    width: 100vw;
    height: 100vh;
    max-width: 100vw;
    max-height: 100vh;
    border: none;
    margin: 0;
  }

  &:not(.unstyled) {
    background-color: var(--bp4DialogBgPrimary);
    color: var(--globalText);
    border-radius: 10px;
    border: none;
    box-shadow:
      0 0 0 1px rgba(16, 22, 26, 0.1),
      0 4px 8px rgba(16, 22, 26, 0.2),
      0 0 20px 3px rgba(16, 22, 26, 0.2);
    // display: flex;
    flex-direction: column;
    max-height: calc(100% - 50px);
    max-width: 733px;
    min-width: 350px;
    width: unset;

    justify-content: center;
  }
  &::backdrop {
    background-color: var(--dialogBackdropBackground);
  }
}

.dialogHeader {
  width: 100%;
  align-items: center;
  background-color: var(--bp4DialogHeaderBg);
  border-bottom: var(--outlineProperties);
  display: flex;
  padding-bottom: 20px;
  padding-left: $paddingHorizontal;
  padding-right: $paddingHorizontal - 5px;
  padding-top: $paddingVertical;
  user-select: none;
}

.dialogHeading {
  align-items: center;
  color: var(--bp4Heading);
  display: flex;
  flex: 1 1 auto;
  font-size: 18px;
  font-weight: 600;
  height: $headerButtonSize;
  margin: 0;
}

.dialogBody {
  width: 100%;
  background-color: var(--bp4DialogBgPrimary);
  flex: 1 1 auto;
  max-height: 90vh;
  overflow: overlay;

  &::-webkit-scrollbar-track {
    background: transparent;
  }
}

.dialogContent {
  padding-left: $paddingHorizontal;
  padding-right: $paddingHorizontal;
  line-height: 22px;

  &.paddingTop {
    padding-top: $paddingVertical;
  }

  &.paddingBottom {
    padding-bottom: $paddingVertical;
  }
}

// if there is no footer we need a bottom margin
.dialogBody:last-child {
  margin-bottom: 20px;
}

.dialogFooter {
  width: 100%;
  background-color: var(--bp4DialogBgPrimary);
  padding-bottom: $paddingVertical;
  padding-left: $paddingHorizontal;
  padding-right: $paddingHorizontal;
  padding-top: $paddingVertical;
}

.headerButton {
  align-items: center;
  background-color: transparent;
  border-radius: 5px;
  border: 0;
  cursor: pointer;
  display: flex;
  height: $headerButtonSize;
  justify-content: center;
  padding: 0;
  width: $headerButtonSize;

  & + & {
    margin-left: 5px;
  }

  &:hover {
    background-color: var(--chatListItemBgHover);
  }
}

.headerButtonIcon {
  background-color: var(--bp4DialogHeaderIcon);
  margin: 0 !important;
}

.backButton {
  margin-right: 20px;
}

.footerActions {
  display: flex;
  @media (width <= $default-dialog-width) {
    flex-direction: column;
  }

  &.spaceBetween {
    justify-content: space-between;
  }

  &.start {
    justify-content: flex-start;
  }

  &.end {
    justify-content: flex-end;
  }

  &.center {
    justify-content: center;
  }
}

.footerActionButton {
  min-width: 100px;
  padding: 8px 12px !important;
  & + & {
    margin-left: 20px;
  }
  @media (width <= $default-dialog-width) {
    & + & {
      margin-left: 0px;
      margin-top: 20px;
    }
  }
}

